--- a/src/stylesheets/global/typography.scss
+++ b/src/stylesheets/global/typography.scss
@@ -21,7 +21,7 @@ body {
   padding: 0;
   font-display: optional;
   letter-spacing: 0;
-  line-height: 28px;
+  line-height: 1.75em;    //28px
   font-family: "Lato", sans-serif;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
@@ -37,20 +37,19 @@ body {
 h1,
 h2 {
   font-family: "Lato Black", sans-serif;
-  font-size: 28px;
+  font-size: 1.75em;      //28px
   text-transform: uppercase;
   text-align: center;
   color: #000000;
   margin-bottom: 18px;
 }
 h3 {
-  font-family: "Lato Bold", sans-serif;
-  font-size: 24px;
+  font-size: 1.5em;       //24px
   text-align: center;
 }
 h4 {
-  font-size: 16px;
-  margin-bottom: 4px;
+  font-size: 1em;         //16px
+  margin-bottom: 0.25em;  //4px
 }
 
 p {
@@ -84,18 +83,18 @@ ul li {
 /* MD GRID TABLET AND ABOVE BREAKPOINT */
 @media (min-width: 480px) {
   body {
-    font-size: 20px;
+    font-size: 1.125em;  //20px
   }
   h1,
   h2 {
-    font-size: 36px;
+    font-size: 2.25em;  //36px
     line-height: 32px;
   }
   h3 {
-    font-size: 28px;
+    font-size: 1.75em;  //28px
   }
   h4 {
-    font-size: 20px;
+    font-size: 20px;    //20px
   }
 }
 
