--- a/src/stylesheets/global/typography.scss
+++ b/src/stylesheets/global/typography.scss
@@ -44,8 +44,10 @@ h2 {
   margin-bottom: 18px;
 }
 h3 {
+  font-family: "Lato Black", sans-serif;
   font-size: 1.5em;       //24px
   text-align: center;
+  color: #000000;
 }
 h4 {
   font-size: 1em;         //16px
@@ -91,7 +93,7 @@ ul li {
     line-height: 32px;
   }
   h3 {
-    font-size: 1.75em;  //28px
+    font-size: 1.5em;   //24px
   }
   h4 {
     font-size: 20px;    //20px
