--- a/src/stylesheets/prodeti.scss
+++ b/src/stylesheets/prodeti.scss
@@ -352,7 +352,7 @@ h3::after {
     width: 179px;
     height: 412px;
   }
-  .fotky{
+  .fotky {
     width: auto;
     text-align: center;
   }
@@ -371,7 +371,6 @@ section.teachers {
     font-weight: 500;
   }
 }
-
 
 /*opinions:*/
 
@@ -653,7 +652,7 @@ footer {
 
   .nav_bar {
     display: block;
-    background: linear-gradient(#613AB2, #6B3FB2);
+    background: linear-gradient(#613ab2, #6b3fb2);
     height: 54px;
     z-index: 1;
   }
@@ -662,7 +661,8 @@ footer {
     height: auto;
   }
 
-  .fill_1, .fill_2 {
+  .fill_1,
+  .fill_2 {
     padding-bottom: 30px;
   }
 
@@ -735,8 +735,8 @@ footer {
 }
 
 @media (min-width: 768px) {
-.main_info {
-  width: 85%;
-  margin: 0 auto;
-}
+  .main_info {
+    width: 85%;
+    margin: 0 auto;
+  }
 }
