--- a/src/html/layouts/topmonks.html
+++ b/src/html/layouts/topmonks.html
@@ -6,6 +6,7 @@
   <title>{% block title %}{{ language[page].title }}{% endblock %}</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
 
   <!-- Preload CDN assets -->
   <link rel="preconnect" href="https://ajax.googleapis.com">
