--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -1,3 +1,5 @@
+@import "@material/layout-grid/mdc-layout-grid";
+
 :root {
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
@@ -59,7 +61,7 @@ header {
     display: flex;
   }
   .wrapper {
-    padding: 5px 0 0px 24px;
+    padding: 5px 0 0 24px;
   }
   .monk {
     padding-top: 4px;
@@ -72,7 +74,6 @@ nav {
 blockquote {
   position: relative;
   margin: 0 0 3em;
-  line-height: 1.444em;
   quotes: "“" "„" ;
   &::before,
   &::after {
@@ -143,7 +144,7 @@ blockquote {
 }
 
 .box img {
-  margin: 0 auto;
+  margin: 2em auto;
   display: flex;
 }
 
@@ -416,5 +417,3 @@ only screen and (                min-resolution: 2dppx)
     align-content: space-between;
   }
 }
-
-@import "@material/layout-grid/mdc-layout-grid";
