--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -1,6 +1,6 @@
 {%- import 'macros/helpers.html' as macros -%}
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{{ language[page].title }}{% endblock %}</title>
