--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -12,32 +12,32 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <!-- Custom Fonts -->
-  <script>WebFontConfig={google:{families:["Lato:400,700,900:latin-ext"]}, async:true}</script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous"></script>
+  <script>WebFontConfig = { google: { families: ["Lato:400,700,900:latin-ext"] }, async: true }</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer
+          integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM"
+          crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
   <link rel="stylesheet" href="/stylesheets/typography.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
-  <link rel="stylesheet" href="/stylesheets/anicka.css">
 
   {% block head %}{% endblock %}
   {% include "shared/app-icons.html" %}
 </head>
 <body id="page-{{page}}">
-  <header>
-    {% block navigation %}{% endblock %}
-  </header>
+<header>
+  {% block navigation %}{% endblock %}
+</header>
 
-  <main>
-    {% block content %}{% endblock %}
-  </main>
+<main>
+  {% block content %}{% endblock %}
+</main>
 
-  <footer>
-    {% include 'shared/footer.html' %}
-  </footer>
+<footer>
+  {% include 'shared/footer.html' %}
+</footer>
 
 {% block javascript %}
-<script src="/javascripts/app.js"></script>
+<script src="/javascripts/index.js"></script>
 {% endblock %}
 
 </body>
