--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -4,101 +4,94 @@
   --mdc-layout-grid-margin-desktop: 24px;
   --mdc-layout-grid-gutter-desktop: 20px;
   --mdc-layout-grid-column-width-desktop: 60px;
+
+  --tm-primary: #fe664b;
+  --tm-primary-dark: #c53321;
+  --tm-primary-light: #ff9878;
+  --tm-secondary: #5c5fd4;
+  --tm-secondary-dark: #1d35a2;
+  --tm-secondary-light: #918cff;
+  --tm-grey: #9b9b9b;
+  --tm-article-background: #f8fbfc;
+  --tm-black: #4a4a4a;
 }
 
 body {
-  background: #fff url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png") no-repeat;
-  background-position: right calc(50% - 270px) top -40px;
-  background-size: 670px auto;
-}
-svg {
-  fill: currentColor;
+  padding: 0;
+  margin: 0;
 }
 
-footer {
-  /* TODO*/
-  background-image: linear-gradient(
-      -215deg,
-      #3023ae 0%,
-      #53a0fd 47%,
-      #b4ec51 100%
-  ), linear-gradient(
-      -205deg,
-      #3023ae 0%,
-      #53a0fd 47%,
-      #b4ec51 100%
-  );
-}
-
-.wrapper {
+.tm-layout-wrapper {
   max-width: 960px;
   margin: 0 auto;
   padding: 16px;
   --mdc-layout-grid-margin-desktop: 0;
 }
 
-header {
-  a {
-    text-transform: uppercase;
-  }
-  .menu.menu--horizontal .menu__list {
-    display: flex;
-    float: right;
-  }
-  .menu__list a {
-    color: #ffffff;
-    font-weight: bold;
-  }
-  .logo {
-    display: flex;
-    align-items: center;
-  }
-  .logo a {
-    font-size: 1.25em;
+.tm-logo {
+  display: flex;
+  align-items: center;
+  font-family: futura-pt, sans-serif;
+  font-size: 1.25em;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: -1px;
+  text-decoration: none;
+  text-transform: uppercase;
+  @media screen and (max-width: 480px) {
     color: #fff;
-    font-weight: 900;
-    text-decoration: none;
-    display: flex;
+    justify-content: flex-end;
   }
-  .wrapper {
-    padding: 5px 0 0 24px;
-  }
-  .monk {
-    padding-top: 4px;
-    padding-right: 4px;
+  @media screen and (min-width: 481px) {
+    font-size: 1.6em;
+    color: var(--tm-secondary);
+    &:hover {
+      color: var(--tm-secondary-dark);
+    }
   }
 }
+
+.tm-logo .monk {
+  fill: currentColor;
+  padding-right: 6px;
+}
+
 nav {
   display: none;
 }
+
 blockquote {
   position: relative;
   margin: 0 0 3em;
-  quotes: "“" "„" ;
+  quotes: "“" "„";
+  p {
+    display: inline;
+  }
   &::before,
   &::after {
-    color: #dadada;
     content: open-quote;
+    display: inline-block;
+    color: #dadada;
     font-size: 2.125em;
     font-weight: 900;
-    display: block;
     position: absolute;
   }
-  &::before{
+  &::before {
     left: -0.4em;
-    top: 0;
+    top: -0.5em;
   }
   &::after {
     content: close-quote;
-    bottom:0;
-    right: 0;
+    bottom: 0;
+    //right: 0;
   }
 }
+
 .jumbotron__title {
   margin-bottom: 6em;
 }
 
-.main_info {
+.main-info {
   h2 {
     text-align: center;
     border-radius: 50px;
@@ -119,7 +112,7 @@ blockquote {
   display: block;
   border-radius: 100px;
   color: #fff;
-  background-color: var(--topmonks-orange);
+  background-color: var(--tm-primary);
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
   padding: 10px 28px;
   margin: 0 1em;
@@ -128,11 +121,12 @@ blockquote {
 
   &:hover {
     text-decoration: none;
+    background-color: var(--tm-primary-dark);
   }
 }
 
 .sub-text {
-  color: var(--topmonks-grey);
+  color: var(--tm-grey);
 }
 
 .box,
@@ -150,8 +144,7 @@ blockquote {
 
 .teambox {
   &:before {
-    background: url("/images/listen_ic.svg") no-repeat;
-    background-position: center 30px;
+    background: url("/images/listen_ic.svg") no-repeat center 30px;
     background-size: 82px 82px;
     content: "";
     display: block;
@@ -166,16 +159,18 @@ blockquote {
   }
 }
 
-.cooperation, .jumbotron {
+.cooperation,
+.jumbotron {
   p.box--purple {
-    background: linear-gradient(to bottom right, #529cfb 0%, #9966ff 78%);
+    background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
     color: white;
   }
 }
+
 .cooperation {
-  background-image: url("/images/background/bg_working.jpg") ,  url("/images/background/path_bg.jpg");
-  background-position: left , center bottom;
-  background-repeat: no-repeat, no-repeat;
+  background: url("/images/background/bg_working.jpg"),
+    url("/images/background/path_bg.jpg") no-repeat, no-repeat left,
+    center bottom;
   background-size: 490px;
 }
 
@@ -183,12 +178,13 @@ blockquote {
   padding-top: 30px;
   background: url("/images/background/bg_who.jpg") no-repeat;
 }
+
 .product {
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
   background-size: cover;
   position: relative;
   h3 {
-    color: #529CFB;
+    color: #529cfb;
     font-size: 18px;
     text-transform: uppercase;
     text-align: left;
@@ -197,7 +193,6 @@ blockquote {
     width: 200px;
   }
   .steps {
-
     width: 100%;
     height: 100%;
     min-height: 769px;
@@ -205,11 +200,11 @@ blockquote {
   }
   .steps__step {
     position: relative;
-    &:nth-child(even){
+    &:nth-child(even) {
       top: 100px;
       left: 100px;
     }
-    &:nth-child(odd){
+    &:nth-child(odd) {
       top: 160px;
       left: 100px;
     }
@@ -220,14 +215,14 @@ blockquote {
   .sales h3 {
     text-align: left;
   }
-
 }
 
-.studies {
-  .studies_title p {
+.tm-case-studies {
+  .tm-case-studies__title p {
     text-align: center;
   }
   h3 {
+    font-weight: 700;
     text-align: left;
     margin-top: 14px;
     margin-bottom: 0;
@@ -235,16 +230,16 @@ blockquote {
       content: "";
       width: 59px;
       height: 2px;
-      background-color: var(--topmonks-orange);
+      background-color: var(--tm-primary);
       display: block;
-      margin: 16px 0;
+      margin: 8px 0;
     }
   }
-}
-
-.studies {
-  .studies--clients {
+  .tm-case-studies__clients {
     width: 100%;
+  }
+  .tm-case-studies__clients + .tm-case-studies__clients {
+    margin-top: 24px;
   }
 }
 
@@ -256,7 +251,7 @@ blockquote {
   }
   .name {
     font-size: 16px;
-    color: var(--topmonks-grey);
+    color: var(--tm-grey);
     text-align: center;
   }
 }
@@ -266,7 +261,7 @@ blockquote {
   background: url("/images/background/contact_bg.jpg") no-repeat;
 
   .contact_title p {
-    color: var(--topmonks-black);
+    color: var(--tm-black);
   }
   .person--photo img {
     border-radius: 50%;
@@ -277,60 +272,139 @@ blockquote {
 }
 
 /*HAMBURGER*/
-.container {
+
+.tm-hamburger {
+  .tm-hamburger__container {
+    display: inline-block;
+    cursor: pointer;
+    padding: 8px;
+    width: 18px;
+    height: 18px;
+    position: relative;
+  }
+  .tm-hamburger__container::after {
+    content: "menu";
+    color: #9b9b9b;
+    text-transform: uppercase;
+    font-size: 13px;
+    position: absolute;
+    top: 7px;
+    left: 36px;
+  }
+  .tm-hamburger__bar {
+    background-color: #fe664b;
+    width: 20px;
+    height: 2px;
+    position: absolute;
+    top: 16px;
+    transition: transform 0.4s;
+    &:first-of-type {
+      transform: translateY(-6px);
+    }
+    &:last-of-type {
+      transform: translateY(6px);
+    }
+  }
+  .tm-hamburger__container--open {
+    .tm-hamburger__bar:first-of-type {
+      transform: rotate(-45deg);
+    }
+
+    .tm-hamburger__bar:nth-of-type(2) {
+      opacity: 0;
+    }
+
+    .tm-hamburger__bar:last-of-type {
+      transform: rotate(45deg);
+    }
+  }
+}
+
+.tm-app-bar {
+  @media screen and (max-width: 480px) {
+    height: 52px;
+    .tm-layout-wrapper {
+      padding: 8px 16px 0 8px;
+    }
+  }
+  @media screen and (min-width: 481px) {
+    height: 112px;
+    .tm-layout-wrapper {
+      padding: 66px 0 0 16px;
+    }
+  }
+}
+
+.tm-app-bar--sticky {
+  position: fixed;
+  top: 0;
+  background-color: #fff;
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  width: 100%;
+  z-index: 4;
+  .tm-logo {
+    color: var(--tm-secondary) !important;
+  }
+  + main {
+    margin-top: 52px;
+  }
+}
+
+.tm-menu.tm-menu--horizontal .tm-menu__list {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  margin: 0;
+}
+.tm-menu__list a {
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
   display: inline-block;
-  cursor: pointer;
+  padding: 4px 8px;
+}
+.tm-menu__list li + li {
+  margin-left: 4px;
 }
 
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #FE664B;
-  margin: 6px 0;
-  transition: 0.4s;
-}
-
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
-}
-
-.change .bar2 {
-  opacity: 0;
-}
-
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
-}
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx)
-{
-  body {
+#page-topmonks-index {
+  @media screen and (max-width: 480px) {
+    background: #fff
+      url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 270px) top -40px;
+    background-size: 670px auto;
+    overflow-x: hidden;
+  }
+  @media screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (min--moz-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (-o-min-device-pixel-ratio: 2/1),
+    screen and (max-width: 480px) and (min-device-pixel-ratio: 2),
+    screen and (max-width: 480px) and (min-resolution: 192dpi),
+    screen and (max-width: 480px) and (min-resolution: 2dppx) {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_670,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
+  }
+  @media screen and (min-width: 481px) {
+    background: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 320px) top 0;
+    background-size: 867px auto;
+  }
+  @media screen and (min-width: 841px) and (min-device-pixel-ratio: 2),
+    screen and (min-width: 841px) and (min-resolution: 192dpi),
+    screen and (min-width: 841px) and (min-resolution: 2dppx) {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
   }
 }
 
 /* MD GRID TABLET AND ABOVE BREAKPOINT */
 @media (min-width: 480px) {
-  body {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_auto,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
-    background-position: right calc(50% - 320px) top 0;
-    background-size: 867px auto;
-  }
   nav {
     display: block;
-    .menu__list li + li{
+    .menu__list li + li {
       margin-left: 20px;
     }
   }
-  .wrapper{
+  .tm-layout-wrapper {
     padding: 24px 0;
   }
   .action-button {
@@ -341,23 +415,14 @@ only screen and (                min-resolution: 2dppx)
     left: 0;
     top: 0.2em;
   }
-  header {
-    .wrapper{
-      padding: 40px 0 40px 24px;
-    }
-    .logo a {
-      font-size: 1.6em;
-      color: #5C5FD4;
-    }
-  }
-  .jumbotron__title{
+  .jumbotron__title {
     margin-bottom: auto;
   }
   .product .steps {
     width: auto;
     background: url("/images/background/product_bg.svg") 50% no-repeat;
   }
-  .main_info {
+  .main-info {
     position: relative;
     h2 {
       text-align: left;
@@ -371,15 +436,15 @@ only screen and (                min-resolution: 2dppx)
     .jumbotron__lead p {
       max-width: 320px;
     }
-    p.box--purple {
-      display: block;
+    .box--purple {
+      display: inline-block;
       box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
-      background: linear-gradient(to bottom right, #529cfb 0%, #9966ff 78%);
+      background: linear-gradient(to bottom right, #529cfb 0%, #96f 78%);
       border-radius: 50px;
       text-align: center;
-      width: 8em;
       font-weight: 700;
       margin: 0 auto;
+      padding: 8px 24px;
       text-transform: uppercase;
     }
     .box--lead {
@@ -395,25 +460,14 @@ only screen and (                min-resolution: 2dppx)
       position: center;
     }
   }
-  .hamburger {
+  .tm-hamburger {
     display: none;
   }
 }
 
-/*RETINA - MD GRID DESKTOP BREAKPOINT  */
-@media
-(        min-device-pixel-ratio: 2)      and (min-width: 840px),
-(                min-resolution: 192dpi) and (min-width: 840px),
-(                min-resolution: 2dppx)  and (min-width: 840px)
-{
-  body {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_867,dpr_2,q_auto,f_auto/v1530724292/topmonks.com/bgnd_header.png");
-  }
-}
-
 /* MD GRID TABLET ONLY BREAKPOINT */
-@media (min-width: 480px) and (max-width: 839px) {
-  .studies--clients {
+@media screen and (min-width: 480px) and (max-width: 839px) {
+  .tm-case-studies__clients {
     align-content: space-between;
   }
 }
