--- a/www.topmonks.com/src/stylesheets/typography.scss
+++ b/www.topmonks.com/src/stylesheets/typography.scss
@@ -1,25 +1,10 @@
-:root {
-  --insight-negative-color: #e13c1e;
-  --insight-positive-color: #7e9204;
-  --topmonks-orange: #fe664b;
-  --topmonks-grey: #9b9b9b;
-  --topmonks-article-background: #f8fbfc;
-  --topmonks-black: #4a4a4a;
-}
-
-/*
-http://pxtoem.com/ - how to count px to em
-*/
-
 body {
+  color: var(--tm-black);
   font-size: 16px;
-  color: var(--topmonks-black);
-  margin: 0;
-  padding: 0;
+  line-height: 1.444;
   font-display: optional;
   letter-spacing: 0;
-  line-height: 1.75em; //28px
-  font-family: "Lato", sans-serif;
+  font-family: lato, sans-serif;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
   font-variant-ligatures: common-ligatures contextual;
@@ -29,23 +14,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: geometricPrecision;
-  line-height: 1.444em;
 }
 
 h1,
 h2 {
-  font-family: "Lato Black", sans-serif;
+  font-family: lato, sans-serif;
   font-size: 1.75em; //28px
   text-transform: uppercase;
   text-align: center;
   color: #000000;
   margin-bottom: 18px;
+  font-weight: 900;
 }
 h3 {
-  font-family: "Lato Black", sans-serif;
+  font-family: lato, sans-serif;
   font-size: 1.5em; //24px
   text-align: center;
   color: #000000;
+  font-weight: 900;
 }
 h4 {
   font-size: 1em; //16px
@@ -56,7 +42,7 @@ p {
   margin: 0 0 1em 0;
 }
 a {
-  color: var(--topmonks-orange);
+  color: var(--tm-primary);
   text-decoration: none;
 
   &:hover {
