removed sticky class

--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -25,7 +25,7 @@
 </head>
 <body id="page-{{page}}">
 
-<header class="tm-app-bar tm-app-bar--sticky">
+<header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div
