--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -82,7 +82,7 @@
   {% block content %}{% endblock %}
 </main>
 
-<footer>
+<footer class="tm-footer">
   {% include 'shared/footer.html' %}
 </footer>
 
