--- a/www.topmonks.com/src/stylesheets/footer.scss
+++ b/www.topmonks.com/src/stylesheets/footer.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.copy-and-media .tm-layout-wrapper {
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
 .social-buttons {
   background-color: #fff;
   border-radius: 52px;
