--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -54,8 +54,8 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu tm-menu--horizontal">
           <ul class="tm-menu__list">
-            <li class=""><a href="/company-values/">about us</a></li>
-            <li class=""><a href="/community/">meet us</a></li>
+            <li class=""><a href="/about-us/">about us</a></li>
+            <li class=""><a href="/meet-us/">meet us</a></li>
             <li class=""><a href="/contact/">contacts</a></li>
             <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
           </ul>
@@ -70,11 +70,31 @@
     hamburger.addEventListener("click", toggleMenu(hamburger));
     function toggleMenu(hamburger) {
       return function(e) {
-        menu.classList.remove("tm-menu--horizontal");
+        menu.classList.toggle("tm-menu--horizontal");
         hamburger.classList.toggle("tm-hamburger__container--open");
-        appBar.classList.toggle("tm-app-bar--open")
+        appBar.classList.toggle("tm-app-bar--open");
       }
     }
+
+    var lastPosition = 0;
+    var ticking = false;
+    document.addEventListener("scroll", function(e) {
+      lastPosition = window.scrollY;
+      if (!ticking) {
+        window.requestAnimationFrame(function() {
+          if (lastPosition > 0) {
+            appBar.classList.add("tm-app-bar--sticky");
+          }
+          else {
+            appBar.classList.remove("tm-app-bar--sticky");
+          }
+          ticking = false;
+        });
+        ticking = true;
+      }
+    });
+
+
   </script>
 </header>
 
